# wandelbots-python

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  jupyter_lite_config.json  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: check.yml  deploy.yml  release.yml
examples/: .env  01_basic.py  02_plan_and_execute.py  03_plan_and_execute_async.py  04_execute_in_background.py  05_move_robot.ipynb  05_notebook.ipynb  06_move_robot_with_ios.ipynb  06_plan_and_execute_ios.py  07_multiple_robots.py  README.md  requirements.txt
tests/: pytest.ini
tests/integration/: conftest.py  test_01_robot_initalization.py  test_02_planning_and_execution.py
tests/unit/: test_on_ipc.py
tests/unit/types/: test_ios.py  test_pose.py
wandelbots/: __init__.py
wandelbots/apis/: controller.py  controller_io.py  device_configuration.py  motion.py  motion_group.py  motion_group_infos.py
wandelbots/core/: instance.py  motiongroup.py  plan_result.py  planner.py
wandelbots/exceptions/: __init__.py  exceptions.py
wandelbots/request/: asyncs.py  config.py  syncs.py
wandelbots/types/: __init__.py  io.py  ios.py  pose.py  vector3d.py
wandelbots/util/: logger.py
