[tool.poetry]
name = "wandelbots"
version = "0.7.1"
description = "Official Python client for the Wandelbots API"
authors = ["Martin George <martin.george@wandelbots.com>"]
readme = "README.md"

[tool.semantic_release]
version_variables = ["setup.py:__version__"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "0.27.2"
requests = "2.32.3"
wandelbots_api_client = "24.5.0"
websockets = "13.0.1"
numpy = "^1.26"
scipy = "^1.11"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
python-dotenv = "^1.0.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
